codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---









• 处理中 (0s • esc 可中断)

• Queued follow-up messages
  ↳ Queued while /review is running.
    ⌥ + ↑ edit last queued message

› Ask Codex to do anything

  ? 查看快捷键                                                 剩余上下文 100%
