codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__status_line_fast_mode_footer.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› 让 Codex 处理任何事情                                                         " Hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " ")]
"                                                                                "
"  快速：开                                                                      " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
