codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__status_line_model_with_reasoning_plan_mode_footer.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 11026
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› 让 Codex 处理任何事情                                                         " Hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " ")]
"                                                                                "
"  gpt-5.4 xhigh 极速 · 100% 剩余 · /tmp/project                                 " Hidden by multi-width symbols: [(17, " "), (19, " "), (29, " "), (31, " ")]
