codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__status_widget_active.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Analyzing (0秒 • esc 可中断)                                                  " Hidden by multi-width symbols: [(15, " "), (24, " "), (26, " "), (28, " ")]
"                                                                                "
"                                                                                "
"› 让 Codex 处理任何事情                                                         " Hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " ")]
"                                                                                "
"  ? 查看快捷键                                                 剩余上下文 100%  " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (64, " "), (66, " "), (68, " "), (70, " "), (72, " ")]
