codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__unified_exec_non_empty_then_empty_active.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: active_combined
---
↳ 与后台终端交互 · just fix
  └ pwd
