codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__unified_exec_non_empty_then_empty_after.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: combined
---
↳ 与后台终端交互 · just fix
  └ pwd

• 等待后台终端 · just fix
