codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__unified_exec_unknown_end_with_active_exploring_cell.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: snapshot
---
History:
• 已执行 echo repro-marker
  └ repro-marker

Active:
• 探索中
  └ 读取 null
