codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__unified_exec_wait_before_streamed_agent_message.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: combined
---
• 等待后台终端 · cargo test -p codex-core

• Streaming response.
